# Generated by Django 5.1.6 on 2026-07-28 01:22

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('resources', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Reservation',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('start_time', models.DateTimeField()),
                ('end_time', models.DateTimeField()),
                ('status', models.CharField(choices=[('pending', 'Pending'), ('queued', 'Queued'), ('active', 'Active'), ('completed', 'Completed'), ('cancelled', 'Cancelled'), ('no_show', 'No-show')], default='pending', max_length=12)),
                ('priority', models.PositiveSmallIntegerField(choices=[(1, 'Individual'), (2, 'Class'), (3, 'Team'), (4, 'Accessibility')], default=1)),
                ('check_in_at', models.DateTimeField(blank=True, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('resource', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='reservations', to='resources.resource')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='reservations', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'ordering': ('-start_time',),
            },
        ),
        migrations.CreateModel(
            name='PriorityQueueEntry',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('priority', models.PositiveSmallIntegerField(choices=[(1, 'Individual'), (2, 'Class'), (3, 'Team'), (4, 'Accessibility')])),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('reservation', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='queue_entry', to='reservations.reservation')),
            ],
            options={
                'ordering': ('-priority', 'created_at', 'pk'),
            },
        ),
    ]
